--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ h3{
 	float: right;
 	padding: 40px 25px;
 }
+
+.intro-title {
+	color: lawngreen;
+}
+
 .project-title{
 	font-family: "lato";
 	position: absolute;
@@ -52,7 +57,7 @@ a{
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	background: lawngreen;
+	background: url(/img/setup.jpg);
 	z-index: 2;
 	overflow: hidden;
 	animation: loader 2s ease 2s;
@@ -69,7 +74,7 @@ a{
 
 .loader .intro h3{
 	font-size: 120px;
-	color: black; 
+	color: lawngreen;
 }
 @keyframes loader{
 	0%{
